--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link href='styles.css' rel='stylesheet' type='text/css'>
     <link href='flowy.css' rel='stylesheet' type='text/css'>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="flowy.js"></script>
     <script src="main.js"></script>   
 </head>
@@ -55,18 +56,7 @@
                 <img src="assets/close.svg">
             </div>
             <p id="header2">Properties</p>
-            <div id="propswitch">
-                <div id="dataprop">Data</div>
-                <div id="alertprop">Alerts</div>
-                <div id="logsprop">Logs</div>
-            </div>
             <div id="proplist">
-                <p class="inputlabel">Select database</p>
-                <div class="dropme">Database 1 <img src="assets/dropdown.svg"></div>
-                <p class="inputlabel">Check properties</p>
-                <div class="dropme">All<img src="assets/dropdown.svg"></div>
-                <div class="checkus"><img src="assets/checkon.svg"><p>Log on successful performance</p></div>
-                <div class="checkus"><img src="assets/checkoff.svg"><p>Give priority to this block</p></div>
             </div>
             <div id="divisionthing"></div>
             <div id="removeblock">Delete blocks</div>
